--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Nueva.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Nueva.cshtml
@@ -172,7 +172,7 @@
                                 <div class="row clearfix">
                                     <div class="col-lg-3 col-md-3 col-sm-3">
                                         <div class="form-group">
-                                            Correo elect. 1:
+                                            E-mail 1:
                                             <input id="txtmail1" name="Email1" type="text" class="form-control" value="@((ViewBag.Empresas==null)?"":ViewBag.Empresas[0].Email1)" />
                                         </div>
                                     </div>
@@ -188,7 +188,7 @@
                                 <div class="row clearfix">
                                     <div class="col-lg-3 col-md-3 col-sm-3">
                                         <div class="form-group">
-                                            Correo elect. 2:
+                                            E-mail 2:
                                             <input id="txtmail2" name="Email2" type="text" class="form-control" value="@((ViewBag.Empresas==null)?"":ViewBag.Empresas[0].Email2)" />
                                         </div>
                                     </div>
@@ -204,7 +204,7 @@
                                 <div class="row clearfix">
                                     <div class="col-lg-3 col-md-3 col-sm-3">
                                         <div class="form-group">
-                                            Correo elect. 3:
+                                            E-mail 3:
                                             <input id="txtmail3" name="Email3" type="text" class="form-control" value="@((ViewBag.Empresas==null)?"":ViewBag.Empresas[0].Email3)" />
                                         </div>
                                     </div>
