--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVenta/EditarPrecioVenta.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVenta/EditarPrecioVenta.cshtml
@@ -111,7 +111,7 @@
                                     </div>
                                 </div>
                                 <div class="col-sm-7">
-                                    <input type="submit" id="btnActualizaPrecio" value="Actualizar Precio" formaction=@Url.Action("ActualizarPrecioVenta") formmethod="post" class="btn btn-raised btn-primary float-right" />
+                                    <input type="submit" id="btnActualizaPrecio" value="Actualizar Precio" formaction=@Url.Action("ActualizarPrecioVenta") formmethod="post" class="btn btn-raised btn-round btn-primary float-right" />
                                 </div>
                             </div>
                         </div>
@@ -120,7 +120,7 @@
                         <div class="row clearfix">
                             <div class="col-lg-5 col-md-5 col-sm-5">
                                 <div class="form-group">
-                                    <input type="submit" value="Regresar" id="btnRegresarIndex" formaction=@Url.Action("Index") class="btn btn-raised btn-primary float-left" />
+                                    <input type="submit" value="Regresar" id="btnRegresarIndex" formaction=@Url.Action("Index") class="btn btn-raised btn-round btn-primary float-left" />
                                 </div>
                             </div>
                         </div>
