--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PuntoVenta/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PuntoVenta/Index.cshtml
@@ -18,99 +18,34 @@
     });
 
     $(function () {
-        $('select').on('change', function (e) {
-
-            //$('#tblChoferes tbody tr').each(function () {
-            //  $(this).find("td").eq(3).css("background-color", "");
-            //});    
-            //$('#tblChoferes tbody tr td:eq(' + 3 + ')').css("background-color", "none");
-
-            //var _lstId = [];
-
-            //var _lstrows = [];
-
+        $('select').on('change', function () {          
             var getIdRepeat = -1;
-            //var currentIndexSelect = $('#tblChoferes tbody tr')[0].rowIndex;
-            var thisIndexSelect = thisIndex;//$(this).index();
-            // var value = $('#tblChoferes tbody tr:eq(' + thisIndexSelect + ')').find('td option:selected').val();
-            var currentSelect = this.value;//$('#usr').find('option:selected').val();
-            //var optionSelected = $("option:selected", this);
-            //var valueSelected = this.value;
-
-            //var val = $(e.target).val();
-            //var text = $(e.target).find("option:selected").text(); //only time the find is required
-            //var name = $(e.target).attr('name');
+            var thisIndexSelect = thisIndex;
+            var currentSelect = this.value;
 
             ////collect the values from selected;
             $('#tblChoferes tbody tr').each(function () {
-                //var customerId = $(this).find("#idtd").html();
                 var value = $(this).find('td option:selected').val();
 
                 var rowindex = $(this).index();
 
-                //_lstrows.push(rowindex);
-                //_lstId.push(value);
                 if (value == currentSelect) {
                     if (thisIndexSelect != rowindex) {
-                        //
                         getIdRepeat = $(this).index();
-                        //  $(this).parent('select').eq(0).attr('selected', 'selected')//.val($(this).val())
-                        // $('#selectBox > option').eq(index).attr('selected', 'selected')
                         return false;
                     }
                 }
 
             });
 
-            //var uniq = _lstId.map((name) => { return { count: 1, name: name } }).reduce((a, b) => {
-            //    a[b.name] = (a[b.name] || 0) + b.count
-            //    return a
-            //}, {})
-
-            //var duplicates = Object.keys(uniq).filter((a) => uniq[a] > 1)
-
-            //var isMyObjectEmpty = !Object.keys(duplicates).length;
-
-
-            //if (!isMyObjectEmpty) {
-
-
             if (getIdRepeat >= 0) {
-
-                //var currentSelect = $('#tblChoferes tbody tr').find('td option:selected').val()
-                //var currentId = $('#tblChoferes tbody tr')[0].rowIndex;
-                //if (duplicates == currentSelect) {
-                //myFunction(currentSelect);
-                // $('#tblChoferes tbody tr:eq(' + getIdRepeat + ') td:eq(' + 3 + ') option[value=0]').attr('selected', 'selected');
                 $('#tblChoferes tbody tr:eq(' + getIdRepeat + ') td:eq(' + 3 + ')').css("background-color", "red");
-
-                //$("#tblChoferes tr td:nth-child(4):first").css("background-color", "red");
-                //$("#tblChoferes tbody tr td option[value=0]").attr('selected', 'selected');
-
-                //$("#tblChoferes tr td:nth-child(4):first").css("background-color", "red");
-                //$("#tblChoferes tbody tr td option[value=0]").attr('selected', 'selected');
-                //}
             }
-
-            /********************************/
-            //get new value selected
-
-
-            //var tr = $(this).closest("tr");
-            //tr.find("select option").attr("disabled", ""); //enable everything
-            ////collect the values from selected;
-            //var arr = $.map
-            //(
-            //   tr.find("select option:selected"), function (n) {
-            //       return n.value;
-            //   }
-            // );
-
+            
             /***********GUARDARChofer************/
-
             var url = "/PuntoVenta/Guardar";
             var idChofer = currentSelect;
-            //var idEmpresa = $('#tblChoferes tbody tr:eq(' + currentIndexSelect + ') td:eq(' + 0 + ')').text();
+
             var uri = $('#tblChoferes tbody tr:eq(' + thisIndexSelect + ') td:eq(' + 0 + ')').prevObject[0].activeElement.baseURI;
             var idEmpresa = uri.substring(uri.lastIndexOf('=') + 1);
             var idPV = uri.substring(uri.lastIndexOf('/') + 1).substring(0, 1);
@@ -121,10 +56,9 @@
                     window.location.reload(true);
                     location.reload(true);
 
-                    //get messages Error
                 }
                 else {
-                    //get message Sucess
+
                     $('#success').show(true);
                     location.reload(true);
                 }
@@ -148,7 +82,19 @@
     <section class="content home">
         <div class="container-fluid">
             <div class="block-header">
+                <div class="row clearfix">
+                    <div class="col-lg-5 col-md-5 col-sm-12">
+                        <h2>Puntos de Venta</h2>
+                        <ul class="breadcrumb padding-0">
+                            <li class="breadcrumb-item"><a href="@Url.Action("Inicio", "Home")"><i class="zmdi zmdi-home"></i></a></li>
+                            <li class="breadcrumb-item">Catálogos</li>
+                            <li class="breadcrumb-item">Puntos de Venta</li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="card">
+                    <div class="header">
+                    </div>
                     <div class="body">
                         <div class="row clearfix">
                             <div class="col-lg-12 col-md-12 col-sm-12">
@@ -157,7 +103,7 @@
                                     <select name="IdEmpresa" id="ddlEmpresas" class="form-control selectpicker z-index show-tick" data-live-search="true" onchange="">
                                         @foreach (var lst in ViewBag.Empresas)
                                         {
-                                        <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                            <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
                                         }
                                     </select>
                                 </div>
@@ -178,7 +124,7 @@
                                                 <th>Unidad</th>
                                                 <th>Punto de venta</th>
                                                 <th>Operador/Chofer</th>
-                                                <th>Accion</th>
+                                                <th>Acción</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -205,7 +151,8 @@
                                                                     }
                                                                 }
                                                             </select>
-                                                        </td>}
+                                                        </td>
+                                                    }
                                                     else
                                                     {
                                                         <td>@item.OperadorChofer</td>
@@ -271,7 +218,7 @@
     </section>
 
 }
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+@*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>*@
 
 
