--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/ActualizaCredenciales.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/ActualizaCredenciales.cshtml
@@ -33,97 +33,104 @@
     <section class="content home">
         <div class="container-fluid">
 
-            <div class="row clearfix">
-                <div class="col-lg-7 col-md-7 col-sm-12">
-                    <h3>&nbsp;Catálogo / Usuarios / Credenciales</h3>
+            <div class="row clearfix">               
+                <div class="col-lg-5 col-md-5 col-sm-12">
+                    <h2>Usuarios</h2>
+                    <ul class="breadcrumb padding-0">
+                        <li class="breadcrumb-item"><a href="@Url.Action("Inicio", "Home")"><i class="zmdi zmdi-home"></i></a></li>
+                        <li class="breadcrumb-item">Catálogo</li>
+                        <li class="breadcrumb-item">Usuarios</li>
+                        <li class="breadcrumb-item">Credenciales</li>                       
+                    </ul>
                 </div>
             </div>
 
-            <div class="row clearfix">
-                <div class="col-lg-12 col-md-12 col-sm-12">
-                    <div class="card">
-                        <div class="body">
-                            <div class="row clearfix">
-                                <div class="col-lg-12 col-md-12 col-sm-12">
-                                    <div class="form-group">
-                                        <div class="col-lg-12 col-md-12 col-sm-12">
-                                            <div>
-                                                <input id="Nombre" type="text" name="Nombre" readonly="readonly" class="form-control" value="@((ViewBag.IdUser==null)?"":ViewBag.IdUser[0].Nombre + " " +ViewBag.IdUser[0].Apellido1 + " " +ViewBag.IdUser[0].Apellido2 )" />
-                                                <input type="text" name="IdUsuario" hidden="hidden" value="@ViewBag.IdUser[0].IdUsuario" readonly="readonly" id="IdUsuario" class="form-control" />
-                                                <input type="text" name="Nombre" hidden="hidden" value="@ViewBag.IdUser[0].Nombre" readonly="readonly" class="form-control" />
-                                                <input type="text" name="Apellido1" hidden="hidden" value="@ViewBag.IdUser[0].Apellido1" readonly="readonly" class="form-control" />
-                                                <input type="text" name="IdPais" hidden="hidden" value="@ViewBag.IdUser[0].IdPais" readonly="readonly" class="form-control" />
-                                                <input type="text" name="Municipio" hidden="hidden" value="@ViewBag.IdUser[0].Municipio" readonly="readonly" lass="form-control" />
-                                                <input type="text" name="CodigoPostal" hidden="hidden" value="@ViewBag.IdUser[0].CodigoPostal" readonly="readonly" class="form-control" />
-                                                <input type="text" name="Colonia" hidden="hidden" value="@ViewBag.IdUser[0].Colonia" readonly="readonly" class="form-control" />
-                                                <input type="text" name="Calle" hidden="hidden" value="@ViewBag.IdUser[0].Calle" readonly="readonly" class="form-control" />
-                                                <input type="text" name="NumExt" hidden="hidden" value="@ViewBag.IdUser[0].NumExt" readonly="readonly" class="form-control" />
-                                               </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row clearfix">
-                                <div class="col-lg-12 col-md-12 col-sm-12">
-                                    <div class="form-group">
-                                        <div class="col-lg-12 col-md-12 col-sm-12">
-                                            <label for="txtmail">
-                                                Correo elect.:*
-                                            </label>
-                                            <input type="text" name="Email1" id="txtmail" class="form-control">
-                                            @Html.ValidationMessageFor(m => m.Email1, "", new { @class = "alert-danger" })
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row clearfix">
-                                <div class="col-lg-12 col-md-12 col-sm-12">
-                                    <div class="form-group">
-                                        <div class="col-lg-12 col-md-12 col-sm-12">
-                                            <label for="txtpwd">
-                                                Contraseña:*
-                                            </label>
-                                            <input type="password" name="Password" id="txtpwd" class="form-control">
-                                            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "alert-danger" })
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="body">
                 <div class="row clearfix">
-                    <div class="col-lg-5 col-md-5 col-sm-5">
-                        <div class="form-group">
-                            <input type="submit" id="btnRegresarIndex" value="Regresar" formaction=@Url.Action("Index") class="btn btn-raised btn-primary float-left" formaction="Index" />
-                        </div>
-                    </div>
-                    <div class="col-lg-7 col-md-7 col-sm-7">
-                        <div class="form-group">
-                            <button class="btn btn-raised btn-primary float-right" title="Upload file"><i class="glyphicon glyphicon-open-file"></i>  Actualizar</button>
-
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                        <div class="card">
+                            <div class="body">
+                                <div class="row clearfix">
+                                    <div class="col-lg-12 col-md-12 col-sm-12">
+                                        <div class="form-group">
+                                            <div class="col-lg-12 col-md-12 col-sm-12">
+                                                <div>
+                                                    <input id="Nombre" type="text" name="Nombre" readonly="readonly" class="form-control" value="@((ViewBag.IdUser==null)?"":ViewBag.IdUser[0].Nombre + " " +ViewBag.IdUser[0].Apellido1 + " " +ViewBag.IdUser[0].Apellido2 )" />
+                                                    <input type="text" name="IdUsuario" hidden="hidden" value="@ViewBag.IdUser[0].IdUsuario" readonly="readonly" id="IdUsuario" class="form-control" />
+                                                    <input type="text" name="Nombre" hidden="hidden" value="@ViewBag.IdUser[0].Nombre" readonly="readonly" class="form-control" />
+                                                    <input type="text" name="Apellido1" hidden="hidden" value="@ViewBag.IdUser[0].Apellido1" readonly="readonly" class="form-control" />
+                                                    <input type="text" name="IdPais" hidden="hidden" value="@ViewBag.IdUser[0].IdPais" readonly="readonly" class="form-control" />
+                                                    <input type="text" name="Municipio" hidden="hidden" value="@ViewBag.IdUser[0].Municipio" readonly="readonly" lass="form-control" />
+                                                    <input type="text" name="CodigoPostal" hidden="hidden" value="@ViewBag.IdUser[0].CodigoPostal" readonly="readonly" class="form-control" />
+                                                    <input type="text" name="Colonia" hidden="hidden" value="@ViewBag.IdUser[0].Colonia" readonly="readonly" class="form-control" />
+                                                    <input type="text" name="Calle" hidden="hidden" value="@ViewBag.IdUser[0].Calle" readonly="readonly" class="form-control" />
+                                                    <input type="text" name="NumExt" hidden="hidden" value="@ViewBag.IdUser[0].NumExt" readonly="readonly" class="form-control" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row clearfix">
+                                    <div class="col-lg-12 col-md-12 col-sm-12">
+                                        <div class="form-group">
+                                            <div class="col-lg-12 col-md-12 col-sm-12">
+                                                <label for="txtmail">
+                                                    Correo elect.:*
+                                                </label>
+                                                <input type="text" name="Email1" id="txtmail" class="form-control">
+                                                @Html.ValidationMessageFor(m => m.Email1, "", new { @class = "alert-danger" })
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row clearfix">
+                                    <div class="col-lg-12 col-md-12 col-sm-12">
+                                        <div class="form-group">
+                                            <div class="col-lg-12 col-md-12 col-sm-12">
+                                                <label for="txtpwd">
+                                                    Contraseña:*
+                                                </label>
+                                                <input type="password" name="Password" id="txtpwd" class="form-control">
+                                                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "alert-danger" })
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            @if (ViewBag.MessageError != null)
+
+                <div class="body">
+                    <div class="row clearfix">
+                        <div class="col-lg-5 col-md-5 col-sm-5">
+                            <div class="form-group">
+                                <input type="submit" id="btnRegresarIndex" value="Regresar" formaction=@Url.Action("Index") class="btn btn-raised btn-primary btn-round float-left"/>
+                            </div>
+                        </div>
+                        <div class="col-lg-7 col-md-7 col-sm-7">
+                            <div class="form-group">
+                                <button class="btn btn-raised btn-primary btn-round float-right"> Actualizar</button>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                @if (ViewBag.MessageError != null)
                 {
-                <div class="row clearfix">
-                    <div id="divMensajeError" class="container">
-                        <div class="alert alert-danger">
-                            <div class="alert-icon">
-                                <i class="zmdi zmdi-block"></i>
+                    <div class="row clearfix">
+                        <div id="divMensajeError" class="container">
+                            <div class="alert alert-danger">
+                                <div class="alert-icon">
+                                    <i class="zmdi zmdi-block"></i>
+                                </div>
+                                <strong>
+                                    <label>@ViewBag.MessageError</label>
+                                </strong>
                             </div>
-                            <strong>
-                                <label>@ViewBag.MessageError</label>
-                            </strong>
                         </div>
                     </div>
-                </div>
-            }
-        </div>
+                }
+            </div>
+
     </section>
 }
