--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/ActualizaRoles.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/ActualizaRoles.cshtml
@@ -11,9 +11,8 @@
 <script src="~/assets/js/pages/ui/notifications.js"></script>
 <script type="text/javascript">
     var message = '@ViewBag.Msj';
-    var tipo = '@ViewBag.Tipo';  
+    var tipo = '@ViewBag.Tipo';
     if (message != '') {
-
         $(window).on("load", showNotification(tipo, message, 'top', 'center', '', ''));
     }
 </script>
@@ -23,9 +22,16 @@
         <div class="container-fluid">
 
             <div class="row clearfix">
-                <div class="col-lg-7 col-md-7 col-sm-12">
-                    <h3>&nbsp;Catálogo / Usuarios / Roles</h3>
+                <div class="col-lg-5 col-md-5 col-sm-12">
+                    <h2>Catálogos</h2>
+                    <ul class="breadcrumb padding-0">
+                        <li class="breadcrumb-item"><a href="@Url.Action("Inicio", "Home")"><i class="zmdi zmdi-home"></i></a></li>
+                        <li class="breadcrumb-item">Usuarios</li>
+                        <li class="breadcrumb-item">Roles</li>
+                        <li class="breadcrumb-item">Asignación</li>
+                    </ul>
                 </div>
+
             </div>
 
             <div class="row clearfix">
@@ -42,7 +48,7 @@
                             <div class="col-sm-12">
                                 <div class="row clearfix">
                                     <div class="col-sm-5">
-                                        <select id="ddlRoles" name="IdRol" class="form-control selectpicker z-index show-tick">
+                                        <select id="ddlRoles" name="IdRol" class="form-control show-tick">
                                             <option value="0">Seleccione..</option>
                                             @foreach (var lst in ViewBag.AllRoles)
                                             {
@@ -52,7 +58,7 @@
                                     </div>
 
                                     <div class="col-sm-3">
-                                        <button class="btn btn-raised btn-primary float-right"> Agregar</button>
+                                        <button class="btn btn-raised btn-primary btn-round float-right"> Agregar</button>
                                     </div>
                                 </div>
                             </div>
@@ -62,41 +68,42 @@
             </div>
             <div class="row clearfix">
                 <div class="col-lg-6 col-md-6 col-sm-6">
-                    <div class="table-responsive">
-                        <table class="table table table-bordered table-striped table-hover js-basic-example dataTable" name="EmpresasGaseras">
-                            <thead>
-                                <tr>
-                                    <th>Roles Asignados</th>
-                                    <th>Acciones</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var itemUser in @ViewBag.IdUser)
-                                {
-                                    foreach (var item in @ViewBag.IdUser[0].Roles)
+                    <div class="blockquote blockquote-info btn-round col-lg-6 col-md-6 col-sm-6">
+                        <div class="table-responsive">
+                            <table class="table table table-striped table-hover" name="EmpresasGaseras">
+                                <thead>
+                                    <tr>
+                                        <th>Roles Asignados</th>
+                                        <th>Acciones</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var itemUser in @ViewBag.IdUser)
                                     {
-                                        <tr>
-                                            <th>@item.NombreRol</th>
-                                            <td>
-                                                <a ID="lbBorrar" href="@Url.Action("BorrarRol", "Usuarios", new { id = item.IdRol, idUsr = itemUser.IdUsuario })">
-                                                    <i class="material-icons">delete</i>
-                                                    <span class="icon-name"></span>
-                                                </a>
-                                            </td>
-                                        </tr>
+                                        foreach (var item in @ViewBag.IdUser[0].Roles)
+                                        {
+                                            <tr>
+                                                <th>@item.NombreRol</th>
+                                                <td>
+                                                    <a ID="lbBorrar" href="@Url.Action("BorrarRol", "Usuarios", new { id = item.IdRol, idUsr = itemUser.IdUsuario })">
+                                                        <i class="material-icons">delete</i>
+                                                        <span class="icon-name"></span>
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                        }
                                     }
-                                }
-                            </tbody>
-                        </table>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
-
             <div class="body">
                 <div class="row clearfix">
                     <div class="col-lg-3 col-md-3 col-sm-3">
                         <div class="form-group">
-                            <input type="submit" value="Regresar" formaction=@Url.Action("Index") class="btn btn-raised btn-primary float-left" />
+                            <input type="submit" value="Regresar" formaction=@Url.Action("Index") class="btn btn-raised btn-primary btn-round float-left" />
                         </div>
                     </div>
                 </div>
