JSA-09/11/2018 Avance de ajustes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CentroCosto/CentroCosto.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CentroCosto/CentroCosto.cshtml
@@ -49,11 +49,18 @@
                                     <div class="col-md-3 form-control-label">
                                         <label for="ddlTipoCentroCosto">Tipo centro de costo</label>
                                         <div class="form-group">
-                                            <select name=IdTipoCentroCosto  class="form-control z-index selectpicker" data-live-search="true">
+                                            <select name=IdTipoCentroCosto class="form-control z-index selectpicker" data-live-search="true">
                                                 <option id="0">Seleccione uno</option>
                                                 @foreach (var tp in ViewBag.TiposCentrosCosto)
                                                 {
-                                                    <option id="@tp.IdTipoCentroCosto">@tp.Descripcion</option>
+                                                    if (tp.IdTipoCentroCosto == Model.IdTipoCentroCosto)
+                                                    {
+                                                        <option id="@tp.IdTipoCentroCosto" selected>@tp.Descripcion</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option id="@tp.IdTipoCentroCosto">@tp.Descripcion</option>
+                                                    }
                                                 }
                                             </select>
                                         </div>
@@ -64,15 +71,22 @@
                                     <div class="col-md-3 form-control-label">
                                         <label for="ddlEquipoTransporte">Equipo Transporte</label>
                                         <div class="form-group">
-                                            <select id="IdEquipoTransporte"  class="form-control z-index selectpicker" data-live-search="true">
+                                            <select id="IdEquipoTransporte" class="form-control z-index selectpicker" data-live-search="true">
                                                 <option id="0">Seleccione uno</option>
                                                 @foreach (var tp in ViewBag.EquipoTransporte)
                                                 {
-                                                    <option id="@tp.IdEquipoTransporte">@tp.Descripcion</option>
+                                                    if (tp.IdEquipoTransporte == Model.IdEquipoTransporte)
+                                                    {
+                                                        <option id="@tp.IdEquipoTransporte" selected>@tp.Descripcion</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option id="@tp.IdEquipoTransporte">@tp.Descripcion</option>
+                                                    }
                                                 }
                                             </select>
                                         </div>
-                                      @Html.ValidationMessageFor(m => m.IdTipoCentroCosto, "", new { @class = "alert-danger" })
+                                        @Html.ValidationMessageFor(m => m.IdTipoCentroCosto, "", new { @class = "alert-danger" })
                                     </div>
                                     @*<div class="col-md-3 form-control-label">
                                         <label for="ddlVehiculo">Vehiculo</label>
@@ -85,11 +99,19 @@
                                     <div class="col-md-3 form-control-label">
                                         <label for="ddlUnidadAlmacenGas">Unidad de almacén de gas</label>
                                         <div class="form-group">
-                                            <select id="IdCAlmacenGas"  class="form-control z-index selectpicker" data-live-search="true">
+                                            <select id="IdCAlmacenGas" class="form-control z-index selectpicker" data-live-search="true">
                                                 <option id="0">Seleccione uno</option>
                                                 @foreach (var tp in ViewBag.UnidadAlmacenGas)
                                                 {
-                                                    <option id="@tp.IdCAlmacenGas">@tp.Numero</option>
+                                                    if (tp.IdCAlmacenGas == Model.IdCAlmacenGas)
+                                                    {
+                                                        <option id="@tp.IdCAlmacenGas" seles>@tp.Numero</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option id="@tp.IdCAlmacenGas">@tp.Numero</option>
+                                                    }
+
                                                 }
                                             </select>
                                         </div>
@@ -98,18 +120,25 @@
                                     <div class="col-md-3 form-control-label">
                                         <label for="ddlEstacionCarburacion">Estación de carburación</label>
                                         <div class="form-group">
-                                            <select id="IdEstacionCarburacion"  class="form-control z-index selectpicker" data-live-search="true">
+                                            <select id="IdEstacionCarburacion" class="form-control z-index selectpicker" data-live-search="true">
                                                 <option id="0">Seleccione uno</option>
                                                 @foreach (var tp in ViewBag.EstacionesCarburacion)
                                                 {
-                                                    <option id="@tp.IdEstacionCarburacion">@tp.Nombre</option>
+                                                    if (tp.IdEstacionCarburacion == Model.IdEstacionCarburacion)
+                                                    {
+                                                        <option id="@tp.IdEstacionCarburacion" selected>@tp.Nombre</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option id="@tp.IdEstacionCarburacion">@tp.Nombre</option>
+                                                    }
                                                 }
                                             </select>
                                         </div>
                                         @Html.ValidationMessageFor(m => m.IdEstacionCarburacion, "", new { @class = "alert-danger" })
                                     </div>
                                     <div class="col-md-3 form-control-label">
-                                       <div><strong>&nbsp; </strong></div> 
+                                        <div><strong>&nbsp; </strong></div>
                                         @if (ViewBag.EsEdicion == null)
                                         {
                                             <button btn id="BtnCrear" formaction="Crear" class="btn btn-primary btn-icon  btn-icon-mini btn-round">
@@ -118,7 +147,7 @@
                                         }
                                         else
                                         {
-                                            <button btn id="btnUpDate" formaction="Modificar" class="btn btn-primary btn-icon  btn-icon-mini btn-round">
+                                            <button btn id="btnUpDate" formaction="ActivarEditar" class="btn btn-primary btn-icon  btn-icon-mini btn-round">
                                                 <i class="zmdi zmdi-swap"></i>
                                             </button>
                                         }
@@ -162,7 +191,7 @@
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <div class="card">
                             <div class="header">
-                                <strong>Centros de costo</strong>
+                                Centros de <strong>costo</strong>
                             </div>
                             <div class="body">
                                 <div class="row clearfix">
