--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Estacion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Estacion.cshtml
@@ -24,7 +24,19 @@
         <section class="content home">
             <div class="container-fluid">
                 <div class="block-header">
+                    <div class="row clearfix">
+                        <div class="col-lg-5 col-md-5 col-sm-12">
+                            <h2>Usuarios</h2>
+                            <ul class="breadcrumb padding-0">
+                                <li class="breadcrumb-item"><a href="@Url.Action("Inicio", "Home")"><i class="zmdi zmdi-home"></i></a></li>
+                                <li class="breadcrumb-item">Catálogos</li>
+                                <li class="breadcrumb-item">Usuarios</li>
+                            </ul>
+                        </div>
+                    </div>
                     <div class="card">
+                        <div class="header">
+                        </div>
                         <div class="body">
                             <div class="row clearfix">
                                 <div class="col-sm-05">
@@ -34,7 +46,7 @@
                                     <input type="text" name="FolioOperacion" class="form-control" value="@((ViewBag.CajaGeneralEstacion ==null)?"": ViewBag.CajaGeneralEstacion[0].FolioOperacion)" />
                                 </div>
                                 <div class="col-sm-2">
-                                    <input type="submit" value="Buscar" formaction=@Url.Action("BuscarEstacion") formmethod="post" class="btn btn-raised btn-primary float-left" />
+                                    <input type="submit" value="Buscar" formaction=@Url.Action("BuscarEstacion") formmethod="post" class="btn btn-raised btn-round btn-primary float-left" />
                                 </div>
                             </div>
                         </div>
@@ -47,7 +59,7 @@
                                     <b>Jefe de estaciones:</b>
                                 </div>
                                 <div class="col-sm-4">
-                                    @Html.LabelFor(model => model.UsuarioRecibe, (string)((@ViewBag.CajaGeneralEstacion == null) ? "value" : @ViewBag.CajaGeneralEstacion[0].UsuarioRecibe), new { @class = "form-control" })
+                                    @Html.LabelFor(model => model.UsuarioRecibe, (string)((@ViewBag.CajaGeneralEstacion == null) ? "" : @ViewBag.CajaGeneralEstacion[0].UsuarioRecibe), new { @class = "form-control" })
                                 </div>
                                 <div class="col-sm-05">
                                     <b></b>
@@ -56,7 +68,7 @@
                                     <b>Fecha de reporte:</b>
                                 </div>
                                 <div class="col-sm-3">
-                                    @Html.LabelFor(model => model.FechaAplicacion, (string)((@ViewBag.CajaGeneralEstacion == null) ? "value" : @ViewBag.CajaGeneralEstacion[0].FechaAplicacion.ToString()), new { @class = "form-control" })
+                                    @Html.LabelFor(model => model.FechaAplicacion, (string)((@ViewBag.CajaGeneralEstacion == null) ? "" : @ViewBag.CajaGeneralEstacion[0].FechaAplicacion.ToString()), new { @class = "form-control" })
                                 </div>
                             </div>
                             <br />
@@ -65,7 +77,7 @@
                                     <b>Anticipos total:</b>
                                 </div>
                                 <div class="col-sm-2">
-                                    @Html.LabelFor(model => model.TotalVenta, (string)((@ViewBag.CajaGeneralEstacion == null) ? "value" : "$" + @ViewBag.CajaGeneralEstacion[0].TotalVenta.ToString()), new { @class = "form-control" })
+                                    @Html.LabelFor(model => model.TotalVenta, (string)((@ViewBag.CajaGeneralEstacion == null) ? "" : "$" + @ViewBag.CajaGeneralEstacion[0].TotalVenta.ToString()), new { @class = "form-control" })
                                 </div>
                             </div>
                             <br />
@@ -75,60 +87,60 @@
 
                                     </div>
                                 </div>
-                                <div class="col-lg-7 col-md-7 col-sm-7">
-                                    <div class="table-responsive">
-                                        <table class="table table table-bordered table-striped table-hover js-basic-example dataTable">
-                                            <thead>
-                                                <tr>
-                                                    <th># Anticipo</th>
-                                                    <th>Concepto</th>
-                                                    <th>Fecha</th>
-                                                    <th>Punto Venta</th>
-                                                    <th>Monto</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                @if (ViewBag.CajaGeneralEstacion != null)
-                                                {
-                                                    foreach (var item in ViewBag.CajaGeneralEstacion)
+                                 <div class="col-lg-7 col-md-7 col-sm-7 blockquote blockquote-info btn-round">
+                                        <div class="table-responsive">
+                                            <table class="table table-striped table-hover">
+                                                <thead>
+                                                    <tr>
+                                                        <th># Anticipo</th>
+                                                        <th>Concepto</th>
+                                                        <th>Fecha</th>
+                                                        <th>Punto Venta</th>
+                                                        <th>Monto</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    @if (ViewBag.CajaGeneralEstacion != null)
                                                     {
-                                                <tr>
-                                                    <td>@item.FolioOperacion</td>
-                                                    <td>@item.TipoOperacion</td>
-                                                    <td>@item.FechaCorteAnticipo</td>
-                                                    <td>@item.PuntoVenta</td>
-                                                    <td>$@item.MontoRecortadoAnticipado</td>
-                                                </tr>
+                                                        foreach (var item in ViewBag.CajaGeneralEstacion)
+                                                        {
+                                                            <tr>
+                                                                <td>@item.FolioOperacion</td>
+                                                                <td>@item.TipoOperacion</td>
+                                                                <td>@item.FechaCorteAnticipo</td>
+                                                                <td>@item.PuntoVenta</td>
+                                                                <td>$@item.MontoRecortadoAnticipado</td>
+                                                            </tr>
+                                                        }
                                                     }
-                                                }
-                                            </tbody>
-                                        </table>
-                                    </div><br />
-                                    <div class="row clearfix">
-                                        <div class="col-sm-8" style="text-align:right">
-                                            <b>Efectivo a recibir:</b>
-                                        </div>
-                                        <div class="col-sm-4">
-                                            @Html.LabelFor(model => model.TotalVenta, (string)((@ViewBag.CajaGeneralEstacion == null) ? "value" : @ViewBag.CajaGeneralEstacion[0].TotalVenta.ToString()), new { @class = "form-control" })
-                                        </div>
-                                    </div><br />
-                                    <div class="row clearfix">
-                                        <div class="col-sm-8" style="text-align:right">
-                                            <b>¿Todo esta correcto?:</b>
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <input type="checkbox" id="Chkboxcorrecto" name="Correcto" class="form-control" />
-                                        </div>
-                                    </div><br />
-                                    <div class="row clearfix">
-                                        <div class="col-sm-7">
-                                            @*<input type="submit" value="Regresar" id="btnRegresarIndex" formaction=@Url.Action("GuardarLiquidar") formaction=@Url.Action("Index") class="btn btn-raised btn-primary float-right" />*@
-                                        </div>
-                                        <div class="col-sm-5">
-                                            <input type="submit" id="btnLiquidar" disabled value="Liquidar Estacion" formmethod="post" class="btn btn-raised btn-primary float-right" />
+                                                </tbody>
+                                            </table>
+                                        </div><br />
+                                        <div class="row clearfix">
+                                            <div class="col-sm-8" style="text-align:right">
+                                                <b>Efectivo a recibir:</b>
+                                            </div>
+                                            <div class="col-sm-4">
+                                                @Html.LabelFor(model => model.TotalVenta, (string)((@ViewBag.CajaGeneralEstacion == null) ? "" : @ViewBag.CajaGeneralEstacion[0].TotalVenta.ToString()), new { @class = "form-control" })
+                                            </div>
+                                        </div><br />
+                                        <div class="row clearfix">
+                                            <div class="col-sm-8" style="text-align:right">
+                                                <b>¿Todo esta correcto?:</b>
+                                            </div>
+                                            <div class="col-sm-4">
+                                                <input type="checkbox" id="Chkboxcorrecto" name="Correcto" class="form-control" />
+                                            </div>
+                                        </div><br />
+                                        <div class="row clearfix">
+                                            <div class="col-sm-7">
+                                                @*<input type="submit" value="Regresar" id="btnRegresarIndex" formaction=@Url.Action("GuardarLiquidar") formaction=@Url.Action("Index") class="btn btn-raised btn-primary float-right" />*@
+                                            </div>
+                                            <div class="col-sm-5">
+                                                <input type="submit" id="btnLiquidar" disabled value="Liquidar Estación" formmethod="post" class="btn btn-raised btn-round btn-primary float-right" />
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
                             </div>
                         </div>
                     </div>
