--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Index.cshtml
@@ -77,7 +77,7 @@
                     $('#tblfilterable tbody tr').show();
                 }
             });
-        });     
+        });
     </script>
 </head>
 <body style="height:100%">
@@ -86,19 +86,41 @@
         <section class="content home">
             <div class="container-fluid">
                 <div class="block-header">
+                    <div class="row clearfix">
+                        <div class="col-lg-5 col-md-5 col-sm-12">
+                            <h2>Caja General</h2>
+                            <ul class="breadcrumb padding-0">
+                                <li class="breadcrumb-item"><a href="@Url.Action("Inicio", "Home")"><i class="zmdi zmdi-home"></i></a></li>
+                                <li class="breadcrumb-item">Ventas</li>
+                                <li class="breadcrumb-item">Caja General</li>
+                            </ul>
+                        </div>
+                    </div>
                     <div class="card">
+                        <div class="header">
+                        </div>
                         <div class="body">
                             <div class="row clearfix">
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <div class="col-sm-3">
-                                        <b>Gasera</b>
-                                        <select name="IdEmpresa" id="ddlEmpresas" class="form-control selectpicker z-index show-tick">
-                                            <option value="0">Seleccione</option>
-                                            @foreach (var lst in ViewBag.Empresas)
+                                        <div>
+                                            <strong>Gasera</strong>
+                                        </div>
+                                        <div>
+                                            @if (ViewBag.EsAdmin)
                                             {
-                                                <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                                <select id="empresas" name="IdEmpresa" class="form-control show-tick" data-live-search="true">
+                                                    @foreach (var lst in ViewBag.Empresas)
+                                                    {
+                                                        <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                                    }
+                                                </select>
                                             }
-                                        </select>
+                                            else
+                                            {
+                                                @ViewBag.Empresas
+                                            }
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -109,7 +131,7 @@
                         <div class="body">
                             <div class="row clearfix">
                                 <div style="text-align:left; max-width:4.666667%">
-                                    <b>Fecha:</b>
+                                    <b>Fecha</b>
                                 </div>
                                 <div class="col-sm-2">
                                     <b>De:</b>
@@ -130,7 +152,7 @@
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
-                                    <b>Entidad:</b>
+                                    <strong>Entidad:</strong>
                                     <select id="cbxentidad" class="form-control selectpicker z-index show-tick">
                                         <option value="0">Seleccione</option>
                                         @if (ViewBag.CboxEntidad != null)
@@ -143,8 +165,8 @@
                                     </select>
                                 </div>
                                 <div class="col-sm-3">
-                                    <b>Concepto:</b>
-                                    <select id="cbxconcepto" class="form-control selectpicker z-index show-tick">
+                                    <strong>Concepto:</strong>
+                                    <select id="cbxconcepto" class="form-control show-tick">
                                         <option value="0">Seleccione</option>
                                         @if (ViewBag.CboxConcepto != null)
                                         {
@@ -156,23 +178,23 @@
                                     </select>
                                 </div>
                                 <div class="col-sm-12">
-                                    <input type="submit" value="Liquidar" formmethod="post" class="btn btn-raised btn-primary float-right" />
+                                    <input type="submit" value="Liquidar" formmethod="post" class="btn btn-raised btn-round btn-primary float-right" />
 
-                                    <input type="submit" id="btnConsultar" value="Consultar" formaction=@Url.Action("Consultar") formmethod="post" class="btn btn-raised btn-primary float-right" />
+                                    <input type="submit" id="btnConsultar" value="Consultar" formaction=@Url.Action("Consultar") formmethod="post" class="btn btn-raised btn-round btn-primary float-right" />
                                 </div>
                             </div>
                             <br />
-                            <div class="row clearfix">
+                            <div class="col-lg-12 col-md-12 col-sm-12 blockquote blockquote-info btn-round">
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <div class="table-responsive">
-                                        <table class="table table table-bordered table-striped table-hover js-basic-example dataTable" id="tblfilterable">
+                                        <table class="table table-striped table-hover" id="tblfilterable">
                                             <thead>
                                                 <tr>
                                                     <th>Fecha</th>
                                                     <th>Entidad</th>
                                                     <th>Operador/Chofer</th>
                                                     <th>Concepto</th>
-                                                    <th>Descripcion</th>
+                                                    <th>Descripción</th>
                                                     <th>Ingreso</th>
                                                     <th>Egreso</th>
                                                     <th>Saldo</th>
@@ -204,7 +226,7 @@
                                 @if (ViewBag.CajaGeneral != null && ViewBag.CajaGeneral.Count >= 1)
                                 {
                                     <div class="col-md-6">
-                                        Pagina @(ViewBag.CajaGeneral.PageCount < ViewBag.CajaGeneral.PageNumber ? 0 : ViewBag.CajaGeneral.PageNumber) de @ViewBag.CajaGeneral.PageCount
+                                        Página @(ViewBag.CajaGeneral.PageCount < ViewBag.CajaGeneral.PageNumber ? 0 : ViewBag.CajaGeneral.PageNumber) de @ViewBag.CajaGeneral.PageCount
                                     </div>
                                     <div class="col-md-6 text-right">
                                         @Html.PagedListPager((IPagedList)ViewBag.CajaGeneral, page => Url.Action("CajaGeneral", new { page, @class = "btn btn-primary btn-simple" }))
