--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVentaOtro/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVentaOtro/Index.cshtml
@@ -160,13 +160,24 @@
                             <div class="row clearfix">
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <div class="col-sm-3">
-                                        <b>Gasera</b>
-                                        <select name="IdEmpresa" id="ddlEmpresas" class="form-control selectpicker z-index show-tick" data-live-search="true" onchange="">
-                                            @foreach (var lst in ViewBag.Empresas)
+                                        <div>
+                                            <strong>Gasera</strong>
+                                        </div>
+                                        <div>
+                                            @if (ViewBag.EsAdmin)
                                             {
-                                            <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                                <select id="empresas" name="IdEmpresa" class="form-control show-tick" data-live-search="true">
+                                                    @foreach (var lst in ViewBag.Empresas)
+                                                    {
+                                                        <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                                    }
+                                                </select>
                                             }
-                                        </select>
+                                            else
+                                            {
+                                                @ViewBag.Empresas
+                                            }
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -293,7 +304,7 @@
                                 <div class="row clearfix blockquote blockquote-info btn-round">
                                     <div class="col-lg-12 col-md-12 col-sm-12">
                                         <div class="table-responsive">
-                                            <table class="table table table-striped table-hover dataTable" id="tblfilterable" name="PreciosVenta">
+                                            <table class="table table-striped table-hover" id="tblfilterable" name="PreciosVenta">
                                                 <thead>
                                                     <tr>
                                                         <th>Gasera</th>
