--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PuntoVenta/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PuntoVenta/Index.cshtml
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" />
 <script src="~/Resources/js/lib/jquery-1.9.1.js"></script>
 
-<script type="text/javascript">
+@*<script type="text/javascript">
     var thisIndex = -1;
     $(document).ready(function () {
         $("#tblChoferes tbody").delegate('tr', 'click', function () {
@@ -18,7 +18,8 @@
     });
 
     $(function () {
-        $('select').on('change', function () {          
+        $('select').on('change', function () {
+            debugger
             var getIdRepeat = -1;
             var thisIndexSelect = thisIndex;
             var currentSelect = this.value;
@@ -40,35 +41,39 @@
 
             if (getIdRepeat >= 0) {
                 $('#tblChoferes tbody tr:eq(' + getIdRepeat + ') td:eq(' + 3 + ')').css("background-color", "red");
+               // $('#usr').               
+                $('#usr option[value="0"]');
+                $('#tblChoferes tbody tr:eq(' + getIdRepeat + ') td:eq(' + 3 + ')').find('td option:selected').val();
             }
-            
+
             /***********GUARDARChofer************/
             var url = "/PuntoVenta/Guardar";
             var idChofer = currentSelect;
 
             var uri = $('#tblChoferes tbody tr:eq(' + thisIndexSelect + ') td:eq(' + 0 + ')').prevObject[0].activeElement.baseURI;
             var idEmpresa = uri.substring(uri.lastIndexOf('=') + 1);
+            var empresa = $('#tblChoferes tbody tr:eq(' + thisIndexSelect + ') td:eq(' + 0 + ')').html();
             var idPV = uri.substring(uri.lastIndexOf('/') + 1).substring(0, 1);
-
+            debugger
             $.getJSON(url, { idEmpresa: idEmpresa, idChofer: idChofer, idPV: idPV }, function (data) {
-                debugger
-                if (data == "[]") {
-                    window.location.reload(true);
-                    location.reload(true);
+                       if (data == "[]") {
+                   // window.location.reload(true);
+                   // location.reload(true);
 
                 }
                 else {
 
-                    $('#success').show(true);
-                    location.reload(true);
+                    //$('#success').show(true);
+                    //location.reload(true);
                 }
             });
-
-            location.reload(true);
+          
+            window.location.href = '@Url.Action("Index", "PuntoVenta")';
+    
         });
 
     });
-</script>
+</script>*@
 
 <!-- Page Loader -->
 <div class="page-loader-wrapper">
@@ -79,6 +84,7 @@
 </div>
 @using (Html.BeginForm("Registrar", "PuntoVenta", FormMethod.Post))
 {
+    @Html.HiddenFor(m => m.IdPuntoVenta)
     <section class="content home">
         <div class="container-fluid">
             <div class="block-header">
@@ -99,13 +105,24 @@
                         <div class="row clearfix">
                             <div class="col-lg-12 col-md-12 col-sm-12">
                                 <div class="col-sm-3">
-                                    <b>Gasera</b>
-                                    <select name="IdEmpresa" id="ddlEmpresas" class="form-control selectpicker z-index show-tick" data-live-search="true" onchange="">
-                                        @foreach (var lst in ViewBag.Empresas)
+                                    <div>
+                                        <strong>Gasera</strong>
+                                    </div>
+                                    <div>
+                                        @if (ViewBag.EsAdmin)
                                         {
-                                            <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                            <select id="empresas" name="IdEmpresa" class="form-control show-tick" data-live-search="true">
+                                                @foreach (var lst in ViewBag.Empresas)
+                                                {
+                                                    <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                                }
+                                            </select>
                                         }
-                                    </select>
+                                        else
+                                        {
+                                            @ViewBag.Empresas
+                                        }
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -114,12 +131,13 @@
 
                 <div class="card">
                     <div class="body">
-                        <div class="row clearfix">
+                        <div class="row clearfix blockquote blockquote-info btn-round">
                             <div class="col-lg-12 col-md-12 col-sm-12">
                                 <div class="table-responsive">
-                                    <table class="table table table-bordered table-striped table-hover js-basic-example dataTable" id="tblChoferes">
+                                    <table class="table table-striped table-hover" id="tblChoferes">
                                         <thead>
                                             <tr>
+                                                @*<th class="id"></th>*@
                                                 <th>Gasera</th>
                                                 <th>Unidad</th>
                                                 <th>Punto de venta</th>
@@ -131,10 +149,11 @@
                                             @foreach (var item in @ViewBag.ListaPV)
                                             {
                                                 <tr>
+                                                    @*<td class="id">@item.IdPuntoVenta</td>*@
                                                     <td>@item.Empresa</td>
                                                     <td>@item.UnidadesAlmacen</td>
                                                     <td>@item.PuntoVenta</td>
-                                                    @if (ViewBag.Usuarios != null)
+                                                    @*@if (ViewBag.Usuarios != null)
                                                     {
                                                         <td>
                                                             <select id="usr" name="IdUsuario" class="form-control selectpicker z-index show-tick">
@@ -154,11 +173,11 @@
                                                         </td>
                                                     }
                                                     else
-                                                    {
+                                                    {*@
                                                         <td>@item.OperadorChofer</td>
-                                                    }
+                                                    @*  *@
                                                     <td>
-                                                        <a ID="lbEdit" href="@Url.Action("AsignarChofer", "PuntoVenta" , new { idE = item.IdEmpresa,id=item.IdPuntoVenta })">
+                                                        <a ID="lbEdit" href="@Url.Action("AsignarChofer", "PuntoVenta" , new { idE = item.IdEmpresa,idPV=item.IdPuntoVenta })">
                                                             <i class="material-icons">edit</i>
                                                             <span class="icon-name"></span>
                                                         </a>
